--- a/index.html
+++ b/index.html
@@ -8,31 +8,25 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to Free Fire Map Code</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
     </nav>
     <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home page.</p>
         </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>This is the about page.</p>
+        <section id="map_code">
+            <h2>1VS1 Map Code</h2>
+            <p>India Server  #FREEFIRE25789999</p>
+            <p>Brazil Server #FREEFIRE25789999</p>
         </section>
         <section id="contact">
-            <h2>Contact</h2>
-            <p>This is the contact page.</p>
+            <h2>Social Media</h2>
+            <a href="https://t.me/garena420" target="_blank">Youtube</a>
+        </section>
+            <a href="https://youtube.com/@garena_420?si=nxUupZR030JxSDy7" target="_blank">Telegram</a>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 My Simple Website</p>
+        <p>Subscribe to Garena_420 on Youtube</p>
     </footer>
     <script src="script.js"></script>
 </body>
